@@ -33,6 +33,7 @@ Fixed
     Cant use shells other than bash
     Instance names are sometimes invalid when deploying deployment (#379)
     Delete host (#365)
+    Node holding onto client sockets that will be closed (#417)
 
 API Changes
     Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
